<resources>
    <string name="app_name">AutoCar</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Logout</string>
    <string name="entrez_votre_vin">Entrez votre VIN</string>
    <string name="chercher">Chercher</string>
    <string name="entrez_le_vin">Entrez le Vin</string>
    <string name="resultat">Resultat</string>
    <string name="resultat2">Resultat</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="chercherButtonProfil">Chercher</string>
    <string name="resultat_de_votre_recherche">Resultat de votre recherche</string>
    <string name="entrez_le_vin_de_votre_voiture">Entrez le VIN de votre voiture</string>
    <string name="bienvenu">Bienvenu</string>
    <string name="sauver">Sauver</string>
    <string name="le_vin_existe_affiche_ici">Le vin existe, affiche ici</string>
    <string name="nom_de_votre_pi_ce">Nom de votre pièce</string>
    <string name="description_pour_les_autres">Description pour les autres</string>
    <string name="num_ro_du_produit">Numéro du produit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="faire_une_offre">Faire une offre</string>
    <string name="mes_offres">Mes offres</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="votre_offre">votre offre</string>
    <string name="cr_e_par">Créée par</string>
    <string name="autocar">AutoCar</string>
    <string name="ajouter_une_annonce">Ajouter une annonce</string>
    <string name="bakc"><![CDATA[<-----]]></string>
    <string name="mes_offresMesAnnonces">Mes offres</string>
    <string name="chercherAdresse">Chercher</string>
</resources>