<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_profilbackground"
    android:padding="15dp"
    tools:context=".profil">

    <android.widget.Button
        android:id="@+id/RetourChercher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/bakc"
        android:textColor="#FFFFFF"
        app:layout_constraintVertical_bias="0.212" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewMailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenu"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintVertical_bias="0.597" />

        <EditText
            android:id="@+id/editTextVinNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/entrez_le_vin_de_votre_voiture"
            app:layout_constraintVertical_bias="0.112" />

        <android.widget.Button
            android:id="@+id/buttonChercher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/chercherButtonProfil"
            android:textColor="#FFFFFF"
            app:layout_constraintVertical_bias="0.212" />

        <TextView
            android:id="@+id/textViewResultatRecherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat_de_votre_recherche"
            app:layout_constraintTop_toBottomOf="@+id/buttonChercher"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.048" />

        <android.widget.Button
            android:id="@+id/buttonSauver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/sauver"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.374" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bordergradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.175">

        <TextView
            android:id="@+id/textViewVinExistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:text="@string/le_vin_existe_affiche_ici"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/my_carimage"
            android:layout_width="274dp"
            android:layout_height="191dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10sp"
            android:alpha="0.4"
            android:src="@drawable/carpng" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/buttonMesAnnonces"
        style="@style/ButtonStyle.Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mes_annonces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/buttonMesOffres"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <android.widget.Button
        android:id="@+id/buttonMonAdresse"
        style="@style/ButtonStyle.Widget.AppCompat.Button"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginBottom="20sp"
        android:text="Mon adresse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>