<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="15dp"
    tools:context=".Login">


    <ImageView
        android:id="@+id/my_image"
        android:layout_width="274dp"
        android:layout_height="191dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="45sp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:fontFamily="@font/lemon"
            android:gravity="center"
            android:text="@string/autocar"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="10"
            android:hint="email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <android.widget.Button
            android:id="@+id/loginbutton"
            style="@style/ButtonStyle.Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemon"
            android:text="Login"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/registerNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/click_to_register"
            android:fontFamily="@font/lemon"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>